<resources>
    <string name="app_name">Lab6</string>
    <string name="user_name">Абоба</string>
    <string name="user_phone">+79334321465</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="mute">Mute</string>
    <string name="more_actions">More actions</string>
    <string name="view_media">View media</string>
    <string name="search">Search in conversation</string>
    <string name="notifications">Notifications</string>
</resources>