<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toTopOf="@id/guideline">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            android:background="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_for_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ImageView
            android:id="@+id/rounded_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/photo_2020_11_06_00_27_54" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/card_view_for_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/numberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_phone"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/blue"
        android:text=""
        app:cornerRadius="42dp"
        app:icon="@drawable/outline_edit_24"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="28dp"
        app:iconTint="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHeight="53dp"
        app:layout_constraintTop_toBottomOf="@+id/numberTextView"
        app:layout_constraintWidth="45dp" />

    <TextView
        android:id="@+id/button1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        android:layout_marginTop="0dp"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        app:icon="@drawable/outline_local_phone_24"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="28dp"
        app:iconTint="@android:color/white"
        app:layout_constraintHeight="53dp"
        app:layout_constraintStart_toStartOf="@+id/numberTextView"
        app:layout_constraintTop_toBottomOf="@+id/numberTextView"
        app:layout_constraintWidth="45dp" />

    <TextView
        android:id="@+id/button2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        android:layout_marginTop="0dp"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        app:icon="@drawable/outline_notifications_24"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="28dp"
        app:iconTint="@color/white"
        app:layout_constraintHeight="53dp"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/numberTextView"
        app:layout_constraintWidth="45dp" />

    <TextView
        android:id="@+id/button3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mute"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        android:layout_marginTop="0dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/more_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"

        android:text="@string/more_actions"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1Text"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        style="?attr/materialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:paddingStart="10dp"
        android:text="@string/view_media"
        android:textColor="@color/black"
        app:icon="@drawable/outline_photo_24"
        app:iconGravity="start"
        app:iconSize="28dp"
        app:iconTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/more_actions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        style="?attr/materialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:paddingStart="10dp"
        android:text="@string/search"
        android:textColor="@color/black"
        app:icon="@drawable/outline_search_24"
        app:iconGravity="start"
        app:iconSize="28dp"
        app:iconTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        style="?attr/materialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:paddingStart="10dp"
        android:text="@string/notifications"
        android:textColor="@color/black"
        app:icon="@drawable/outline_notifications_24"
        app:iconGravity="start"
        app:iconSize="28dp"
        app:iconTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />


</androidx.constraintlayout.widget.ConstraintLayout>